@@ -48,19 +48,22 @@ FBCALL FBSTRING *fb_Time ( void )
 	time_t 		rawtime;
   	struct tm	*ptm;
 
-	/* alloc temp string */
-    dst = fb_hStrAllocTemp( NULL, 2+1+2+1+2 );
-	if( dst != NULL )
-	{
-        /* guard by global lock because time/localtime might not be thread-safe */
-        FB_LOCK();
-  		time( &rawtime );
-  		ptm = localtime( &rawtime );
-        sprintf( dst->data, "%02d:%02d:%02d", ptm->tm_hour, ptm->tm_min, ptm->tm_sec );
-        FB_UNLOCK();
-	}
-	else
+	/* guard by global lock because time/localtime might not be thread-safe */
+	FB_LOCK();
+
+	rawtime = time( NULL );
+
+	/* Note: localtime() may return NULL, as documented on MSDN and Linux man pages,
+	   and it has been observed to do that on at least one FB user's Windows system,
+	   because of a negative time_t value from time(). */
+	if( ((ptm = localtime( &rawtime )) != NULL) &&
+	    ((dst = fb_hStrAllocTemp( NULL, 2+1+2+1+2 )) != NULL) /* done last so it's not leaked */ ) {
+		sprintf( dst->data, "%02d:%02d:%02d", ptm->tm_hour, ptm->tm_min, ptm->tm_sec );
+	} else {
 		dst = &__fb_ctx.null_desc;
+	}
+
+	FB_UNLOCK();
 
 	return dst;
 }
